--- a/styles.css
+++ b/styles.css
@@ -327,6 +327,7 @@ footer{
     display: block;
     text-decoration: none;
     text-align: center;
+    font-size: 1.1rem;
 }
 /* 
     TO DO: add styles to both links in this section that will:
