--- a/styles.css
+++ b/styles.css
@@ -330,6 +330,7 @@ footer{
     font-size: 1.1rem;
     font-weight: bold;
     width: 50%;
+    box-shadow: var(--box-shadow-lg);
 }
 /* 
     TO DO: add styles to both links in this section that will:
