updated section 2div a

--- a/styles.css
+++ b/styles.css
@@ -386,7 +386,9 @@ footer{
             - left: 60px
 */
 #section2 div > p:last-of-type{
-    
+    background-color: var(--teal-rgba);
+    border:4px dashed var(--dk-gray);
+    margin: 16px 60px 32px 8px;
 }
 
  /* For the div wrapped around that paragraph to show the space its taking up within its container */
